--- a/firmware/Kleinvoet.ioc
+++ b/firmware/Kleinvoet.ioc
@@ -9,57 +9,59 @@ File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
-Mcu.IP1=NVIC
-Mcu.IP10=USB_OTG_FS
-Mcu.IP2=RCC
-Mcu.IP3=RTC
-Mcu.IP4=SDIO
-Mcu.IP5=SPI1
-Mcu.IP6=SPI2
-Mcu.IP7=SYS
-Mcu.IP8=UART4
-Mcu.IP9=USART2
-Mcu.IPNb=11
+Mcu.IP1=DAC
+Mcu.IP10=USART2
+Mcu.IP11=USB_OTG_FS
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=RTC
+Mcu.IP5=SDIO
+Mcu.IP6=SPI1
+Mcu.IP7=SPI2
+Mcu.IP8=SYS
+Mcu.IP9=UART4
+Mcu.IPNb=12
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA3
-Mcu.Pin11=PA5
-Mcu.Pin12=PA6
-Mcu.Pin13=PA7
-Mcu.Pin14=PB1
-Mcu.Pin15=PB12
-Mcu.Pin16=PB13
-Mcu.Pin17=PB14
-Mcu.Pin18=PB15
-Mcu.Pin19=PC8
+Mcu.Pin11=PA4
+Mcu.Pin12=PA5
+Mcu.Pin13=PA6
+Mcu.Pin14=PA7
+Mcu.Pin15=PC4
+Mcu.Pin16=PC5
+Mcu.Pin17=PB1
+Mcu.Pin18=PB12
+Mcu.Pin19=PB13
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PC9
-Mcu.Pin21=PA8
-Mcu.Pin22=PA9
-Mcu.Pin23=PA11
-Mcu.Pin24=PA12
-Mcu.Pin25=PA13
-Mcu.Pin26=PA14
-Mcu.Pin27=PC10
-Mcu.Pin28=PC11
-Mcu.Pin29=PC12
+Mcu.Pin20=PB14
+Mcu.Pin21=PB15
+Mcu.Pin22=PC8
+Mcu.Pin23=PC9
+Mcu.Pin24=PA11
+Mcu.Pin25=PA12
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
+Mcu.Pin28=PC10
+Mcu.Pin29=PC11
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PD2
-Mcu.Pin31=PB3
-Mcu.Pin32=VP_RTC_VS_RTC_Activate
-Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin30=PC12
+Mcu.Pin31=PD2
+Mcu.Pin32=PB3
+Mcu.Pin33=VP_RTC_VS_RTC_Activate
+Mcu.Pin34=VP_SYS_VS_Systick
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PC2
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=34
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
-Mcu.UserName=STM32F446RETx
+Mcu.UserName=STM32F446RCTx
 MxCube.Version=5.6.1
 MxDb.Version=DB.5.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -89,8 +91,10 @@ PA11.Signal=USB_OTG_FS_DM
 PA12.Locked=true
 PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
+PA13.Locked=true
 PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
+PA14.Locked=true
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_Label
@@ -103,33 +107,33 @@ PA3.GPIO_Label=VCP_RX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=CAL_SIG
+PA4.Locked=true
+PA4.Signal=COMP_DAC1_group
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=FLASH_SCK
+PA5.Locked=true
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=FLASH_MISO
+PA6.Locked=true
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=FLASH_MOSI
+PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=SDIO_WP
-PA8.Locked=true
-PA8.Signal=GPIO_Output
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=SDIO_CD
-PA9.Locked=true
-PA9.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=V_MONITOR
+PB1.Locked=true
 PB1.Signal=ADCx_IN9
 PB12.GPIOParameters=GPIO_Label
-PB12.GPIO_Label=ADC_nDRDY
+PB12.GPIO_Label=ADC_nREADY
 PB12.Locked=true
-PB12.Signal=GPIO_Input
+PB12.Signal=GPXTI12
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=ADC_SCK
 PB13.Locked=true
@@ -159,22 +163,35 @@ PC12.Mode=SD_4_bits_Wide_bus
 PC12.Signal=SDIO_CK
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=RTC_CAL
+PC13.Locked=true
 PC13.Mode=Calibration_512Hz
 PC13.Signal=RTC_AF1
+PC14-OSC32_IN.GPIOParameters=GPIO_Label
+PC14-OSC32_IN.GPIO_Label=LSE_IN
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
+PC15-OSC32_OUT.GPIOParameters=GPIO_Label
+PC15-OSC32_OUT.GPIO_Label=LSE_OUT
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=GPS_WAKE
 PC2.Locked=true
-PC2.Signal=GPIO_Output
+PC2.Signal=GPIO_Analog
 PC3.GPIOParameters=GPIO_Label
 PC3.GPIO_Label=GPS_nSAFEBOOT
 PC3.Locked=true
-PC3.Signal=GPIO_Output
+PC3.Signal=GPIO_Analog
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=CAL_EN
+PC4.Locked=true
+PC4.Signal=GPIO_Analog
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=SENSOR_EN
+PC5.Locked=true
+PC5.Signal=GPIO_Analog
 PC8.Locked=true
 PC8.Mode=SD_4_bits_Wide_bus
 PC8.Signal=SDIO_D0
@@ -184,9 +201,13 @@ PC9.Signal=SDIO_D1
 PD2.Locked=true
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.Signal=SDIO_CMD
+PH0-OSC_IN.GPIOParameters=GPIO_Label
+PH0-OSC_IN.GPIO_Label=HSE_IN
 PH0-OSC_IN.Locked=true
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
+PH1-OSC_OUT.GPIOParameters=GPIO_Label
+PH1-OSC_OUT.GPIO_Label=HSE_OUT
 PH1-OSC_OUT.Locked=true
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
@@ -199,7 +220,7 @@ ProjectManager.CoupleFile=false
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32F446RETx
+ProjectManager.DeviceId=STM32F446RCTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.25.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
@@ -217,60 +238,52 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=2-SystemClock_Config-RCC-false-HAL-false
-RCC.AHBFreq_Value=168000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=42000000
-RCC.APB1TimFreq_Value=84000000
-RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=84000000
-RCC.APB2TimFreq_Value=168000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=168000000
-RCC.FCLKCortexFreq_Value=168000000
-RCC.FMPI2C1Freq_Value=42000000
+RCC.CortexFreq_Value=16000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=168000000
-RCC.HSE_VALUE=24000000
-RCC.I2S1Freq_Value=144000000
-RCC.I2S2Freq_Value=144000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2S1Freq_Value,I2S2Freq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
-RCC.MCO2PinFreq_Value=168000000
-RCC.PLLCLKFreq_Value=168000000
-RCC.PLLI2SPCLKFreq_Value=144000000
-RCC.PLLI2SQCLKFreq_Value=144000000
-RCC.PLLI2SRCLKFreq_Value=144000000
-RCC.PLLI2SoutputFreq_Value=144000000
-RCC.PLLM=25
-RCC.PLLN=350
-RCC.PLLQ=7
+RCC.HSE_VALUE=12000000
+RCC.I2S1Freq_Value=72000000
+RCC.I2S2Freq_Value=72000000
+RCC.IPParameters=CECFreq_Value,CortexFreq_Value,FamilyName,HSE_VALUE,I2S1Freq_Value,I2S2Freq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,RCC_RTC_Clock_SourceVirtual,RTCFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
+RCC.PLLCLKFreq_Value=72000000
+RCC.PLLI2SPCLKFreq_Value=72000000
+RCC.PLLI2SQCLKFreq_Value=72000000
+RCC.PLLI2SRCLKFreq_Value=72000000
+RCC.PLLI2SoutputFreq_Value=72000000
+RCC.PLLM=6
+RCC.PLLN=72
+RCC.PLLQ=3
 RCC.PLLQCLKFreq_Value=48000000
-RCC.PLLRCLKFreq_Value=168000000
-RCC.PLLSAIPCLKFreq_Value=144000000
-RCC.PLLSAIQCLKFreq_Value=144000000
-RCC.PLLSAIoutputFreq_Value=144000000
-RCC.PWRFreq_Value=168000000
-RCC.SAIAFreq_Value=144000000
-RCC.SAIBFreq_Value=144000000
+RCC.PLLRCLKFreq_Value=72000000
+RCC.PLLSAIPCLKFreq_Value=72000000
+RCC.PLLSAIQCLKFreq_Value=72000000
+RCC.PLLSAIoutputFreq_Value=72000000
+RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
+RCC.RTCFreq_Value=32768
+RCC.SAIAFreq_Value=72000000
+RCC.SAIBFreq_Value=72000000
 RCC.SDIOFreq_Value=48000000
-RCC.SPDIFRXFreq_Value=168000000
-RCC.SYSCLKFreq_VALUE=168000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.SPDIFRXFreq_Value=72000000
 RCC.USBFreq_Value=48000000
-RCC.VCOI2SInputFreq_Value=1500000
-RCC.VCOI2SOutputFreq_Value=288000000
-RCC.VCOInputFreq_Value=960000
-RCC.VCOOutputFreq_Value=336000000
-RCC.VCOSAIInputFreq_Value=1500000
-RCC.VCOSAIOutputFreq_Value=288000000
+RCC.VCOI2SInputFreq_Value=750000
+RCC.VCOI2SOutputFreq_Value=144000000
+RCC.VCOInputFreq_Value=2000000
+RCC.VCOOutputFreq_Value=144000000
+RCC.VCOSAIInputFreq_Value=750000
+RCC.VCOSAIOutputFreq_Value=144000000
 SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
-SPI1.CalculateBaudRate=42.0 MBits/s
+SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
+SH.COMP_DAC1_group.ConfNb=1
+SH.GPXTI12.0=GPIO_EXTI12
+SH.GPXTI12.ConfNb=1
+SPI1.CalculateBaudRate=8.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI2.CalculateBaudRate=21.0 MBits/s
+SPI2.CalculateBaudRate=8.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI2.Mode=SPI_MODE_MASTER
