--- a/firmware/Kleinvoet.ioc
+++ b/firmware/Kleinvoet.ioc
@@ -33,32 +33,36 @@ Mcu.Pin14=PA7
 Mcu.Pin15=PC4
 Mcu.Pin16=PC5
 Mcu.Pin17=PB1
-Mcu.Pin18=PB12
-Mcu.Pin19=PB13
+Mcu.Pin18=PB2
+Mcu.Pin19=PB12
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB14
-Mcu.Pin21=PB15
-Mcu.Pin22=PC8
-Mcu.Pin23=PC9
-Mcu.Pin24=PA11
-Mcu.Pin25=PA12
-Mcu.Pin26=PA13
-Mcu.Pin27=PA14
-Mcu.Pin28=PC10
-Mcu.Pin29=PC11
+Mcu.Pin20=PB13
+Mcu.Pin21=PB14
+Mcu.Pin22=PB15
+Mcu.Pin23=PC6
+Mcu.Pin24=PC8
+Mcu.Pin25=PC9
+Mcu.Pin26=PA8
+Mcu.Pin27=PA9
+Mcu.Pin28=PA11
+Mcu.Pin29=PA12
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PC12
-Mcu.Pin31=PD2
-Mcu.Pin32=PB3
-Mcu.Pin33=VP_RTC_VS_RTC_Activate
-Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin30=PA13
+Mcu.Pin31=PA14
+Mcu.Pin32=PC10
+Mcu.Pin33=PC11
+Mcu.Pin34=PC12
+Mcu.Pin35=PD2
+Mcu.Pin36=PB3
+Mcu.Pin37=VP_RTC_VS_RTC_Activate
+Mcu.Pin38=VP_SYS_VS_Systick
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PC2
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=35
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RCTx
@@ -126,6 +130,14 @@ PA7.GPIO_Label=FLASH_MOSI
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=SDIO_CD
+PA8.Locked=true
+PA8.Signal=GPIO_Input
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=SDIO_WP
+PA9.Locked=true
+PA9.Signal=GPIO_Input
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=V_MONITOR
 PB1.Locked=true
@@ -149,6 +161,10 @@ PB15.GPIO_Label=ADC_MOSI
 PB15.Locked=true
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=nUSER_BTN
+PB2.Locked=true
+PB2.Signal=GPIO_Input
 PB3.Locked=true
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
@@ -192,6 +208,10 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=SENSOR_EN
 PC5.Locked=true
 PC5.Signal=GPIO_Analog
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=ADC_nCS
+PC6.Locked=true
+PC6.Signal=GPIO_Output
 PC8.Locked=true
 PC8.Mode=SD_4_bits_Wide_bus
 PC8.Signal=SDIO_D0
@@ -238,7 +258,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_DAC_Init-DAC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_SDIO_SD_Init-SDIO-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true,9-MX_UART4_Init-UART4-false-HAL-true,10-MX_USART2_UART_Init-USART2-false-HAL-true,11-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true
 RCC.CECFreq_Value=32786.88524590164
 RCC.CortexFreq_Value=16000000
 RCC.FamilyName=M
