--- a/firmware/Kleinvoet.ioc
+++ b/firmware/Kleinvoet.ioc
@@ -25,44 +25,47 @@ Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA3
-Mcu.Pin11=PA4
-Mcu.Pin12=PA5
-Mcu.Pin13=PA6
-Mcu.Pin14=PA7
-Mcu.Pin15=PC4
-Mcu.Pin16=PC5
-Mcu.Pin17=PB1
-Mcu.Pin18=PB2
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PC4
+Mcu.Pin14=PC5
+Mcu.Pin15=PB0
+Mcu.Pin16=PB1
+Mcu.Pin17=PB2
+Mcu.Pin18=PB10
 Mcu.Pin19=PB12
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin20=PB13
 Mcu.Pin21=PB14
 Mcu.Pin22=PB15
 Mcu.Pin23=PC6
-Mcu.Pin24=PC8
-Mcu.Pin25=PC9
-Mcu.Pin26=PA8
-Mcu.Pin27=PA9
-Mcu.Pin28=PA11
-Mcu.Pin29=PA12
+Mcu.Pin24=PC7
+Mcu.Pin25=PC8
+Mcu.Pin26=PC9
+Mcu.Pin27=PA8
+Mcu.Pin28=PA9
+Mcu.Pin29=PA11
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PA13
-Mcu.Pin31=PA14
-Mcu.Pin32=PC10
-Mcu.Pin33=PC11
-Mcu.Pin34=PC12
-Mcu.Pin35=PD2
-Mcu.Pin36=PB3
-Mcu.Pin37=VP_RTC_VS_RTC_Activate
-Mcu.Pin38=VP_SYS_VS_Systick
+Mcu.Pin30=PA12
+Mcu.Pin31=PA13
+Mcu.Pin32=PA14
+Mcu.Pin33=PA15
+Mcu.Pin34=PC10
+Mcu.Pin35=PC11
+Mcu.Pin36=PC12
+Mcu.Pin37=PD2
+Mcu.Pin38=PB3
+Mcu.Pin39=PB8
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin5=PC2
-Mcu.Pin6=PC3
-Mcu.Pin7=PA0-WKUP
-Mcu.Pin8=PA1
-Mcu.Pin9=PA2
-Mcu.PinsNb=39
+Mcu.Pin40=VP_RTC_VS_RTC_Activate
+Mcu.Pin41=VP_SYS_VS_Systick
+Mcu.Pin5=PA0-WKUP
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA4
+Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RCTx
@@ -101,6 +104,10 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA14.Locked=true
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=LED_STATUS
+PA15.Locked=true
+PA15.Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=VCP_TX
 PA2.Locked=true
@@ -138,10 +145,18 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=SDIO_WP
 PA9.Locked=true
 PA9.Signal=GPIO_Input
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=GPS_nSAFEBOOT
+PB0.Locked=true
+PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=V_MONITOR
 PB1.Locked=true
 PB1.Signal=ADCx_IN9
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=GPS_WAKE
+PB10.Locked=true
+PB10.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=ADC_nREADY
 PB12.Locked=true
@@ -168,6 +183,10 @@ PB2.Signal=GPIO_Input
 PB3.Locked=true
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=USR_BTN
+PB8.Locked=true
+PB8.Signal=GPIO_Input
 PC10.Locked=true
 PC10.Mode=SD_4_bits_Wide_bus
 PC10.Signal=SDIO_D2
@@ -192,14 +211,6 @@ PC15-OSC32_OUT.GPIO_Label=LSE_OUT
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC2.GPIOParameters=GPIO_Label
-PC2.GPIO_Label=GPS_WAKE
-PC2.Locked=true
-PC2.Signal=GPIO_Analog
-PC3.GPIOParameters=GPIO_Label
-PC3.GPIO_Label=GPS_nSAFEBOOT
-PC3.Locked=true
-PC3.Signal=GPIO_Analog
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=CAL_EN
 PC4.Locked=true
@@ -212,6 +223,10 @@ PC6.GPIOParameters=GPIO_Label
 PC6.GPIO_Label=ADC_nCS
 PC6.Locked=true
 PC6.Signal=GPIO_Output
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=ADC_CLK
+PC7.Locked=true
+PC7.Signal=GPIO_Analog
 PC8.Locked=true
 PC8.Mode=SD_4_bits_Wide_bus
 PC8.Signal=SDIO_D0
